--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-router": "^3.0.5",
     "react-scripts": "1.0.11",
     "redux": "^3.7.2",
+    "redux-form": "^6.6.3",
     "redux-logger": "^3.0.6",
     "redux-promise-middleware": "^4.3.0",
     "redux-thunk": "^2.2.0"
